2008-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-lgl-lexer.l
	* src/foreign-ncol-lexer.l : make these work with any EOL 
	encoding

2008-05-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/flow.c (igraph_mincut) : type of `value` should be
	igraph_real_t and not igraph_integer_t
	
	* interfaces/functions.def : corrected type of `value` in
	igraph_mincut

	* interfaces/R/src/rinterface.c.in : corrected type of
	`value` in igraph_mincut
	
2008-05-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/arpack.c (igraph_arpack_unpack_complex) : added

	* src/arpack.c (igraph_arpack_rnsolve) : bug fix, corrects
	occasional segfault, plus keep original 'nev' option, ARPACK
	overwrites this sometimes

	* src/arpack.c (igraph_arpack_rssolve) : default mode is 'LM' 
	and not 'LA' to be conform with igrpah_arpack_rnsolve
	* src/community.c (igraph_community_leading_eigenvector_naive)
	(igraph_community_leading_eigenvector)
	(igrpah_community_leading_eigenvector_step) : updated	

2008-05-12  Tamas Nepusz  <ntamas@rmki.kfki.hu> :
	* src/foreign.c (igraph_read_graph_{ncol,lgl,pajek}) :
	proper error handling

	* examples/simple/igraph_read_graph_lgl : added test case

	* interfaces/python/package/drawing.py : triangle-shaped vertices
	now supported
	
2008-04-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) :
	bug corrected

	* src/type_indexedegelist.c (igraph_empty_attrs) :
	check that number of vertices is finite

2008-04-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_erdos_renyi_game_gnm) : bug corrected,
	no multiedges are generated now

	* src/random.c (igraph_random_sample_alga)
	(igraph_random_sample) : bugs corrected

	* src/structural_properties.c (igraph_is_mutual) : 
	changed order of arguments to be consistent with is_loop
	and is_multiple
	* interfaces/python/src/graphobject.c 
	(igraphmodule_Graph_is_mutual) : updated

	* src/vector.pmt (igraph_vector_binsearch2) :