@@ -1,3 +1,8 @@
+2008-05-25  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* src/fast_community.c (igraph_community_fastgreedy) :
+	check that the graph is simple
+
 2008-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* src/foreign-lgl-lexer.l
